assets/scss/_main.scss
#app{
  position: relative;
  z-index: 0;

  &.purple #items li a{
    background: $purple;
  }

}

form{
 position: relative;
 margin: 0 auto;
 width: 100%;
}
form button{
  display: block;
  visibility: hidden;
  width: 0px;
  padding: 0;
  margin: 0;
}

form input{
  margin: 0 0 1px 0;
  padding: 15px;
  border: none;
  box-sizing: border-box;
  width: 100%;
  max-width: 420px;
  color: $purple;
  background: transparent;

  font-family: $base-font;
  font-size: 20px;
  -webkit-style: none !important;
  transition: all .1s ease-in-out;
  outline: none;
}

::-webkit-input-placeholder, ::-moz-placeholder, :-ms-input-placeholder, :-moz-placeholder {
  color: $purple;
}

#items{
 margin: 0 auto;
 padding: 0;
 list-style: none;
 display: flex;
 flex-flow: column nowrap;
 max-width: 420px;
 background: #111;

 position: relative;
 z-index: 200;

&.purple li a{
  background: $purple;
  color: $white;
}

 li{
  margin-bottom: 1px;
  font-family: $base-font;

  &.done a{
    opacity: .4;
  }

  &:hover{
    opacity: .8;
  }


 }

 li a{
  font-family: $base-font;
  display: block;
  word-wrap: break-word;
  padding: 15px;
  text-decoration: none;
  color: $white;
  transition: all .15s ease-in-out;
  text-align: left;

  position: relative;

  -webkit-hyphens: auto;
   -moz-hyphens: auto;
        hyphens: auto;

  width: auto;

  span{
    font-family: $base-font;
  }

  &:active{
   transform: scale(.98);
  }

 }

 li.ui-sortable-helper a{
   cursor: grabbing;
   cursor: -moz-grabbing;
   cursor: -webkit-grabbing;
 }

 li.ui-state-highlight{
  height: 50px;
  opacity: .4;
  max-width: 620px;
  margin-left: auto;
  margin-right: auto;
 }

 li{
  font-size: 20px;
 }

}

// Clear
a.clear{
  display: inline-block;
  margin: 15px auto;
  padding: 10px;
  color: #666;
  border: 2px solid #666;
  font-size: 12px;
  border-radius: 4px;
  text-transform: uppercase;
  font-weight: bold;
  outline: none;
  &:hover{
    background: #222;
  }
  &:active{
    transform: scale(.9);
  }
}

